--- a/lectures/python/03_advanced_topics/02_property.ipynb
+++ b/lectures/python/03_advanced_topics/02_property.ipynb
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 4\n"
+     ]
+    }
+   ],
    "source": [
     "class Point():\n",
     "    def __init__(self, x,y):\n",
@@ -42,10 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-f6d73f7e1930>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0muse_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-f6d73f7e1930>\u001b[0m in \u001b[0;36muse_point\u001b[0;34m(p)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0muse_point\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;31m# complicated stuff\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;31m# I expect an error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
+     ]
+    }
+   ],
    "source": [
+    "%reset -sf\n",
     "class Point():\n",
     "    def __init__(self, x,y):\n",
     "        self._x = x\n",
@@ -81,9 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "validating date...Done\n"
+     ]
+    }
+   ],
    "source": [
     "class Date():\n",
     "    def __init__(self, day,month,year):\n",
@@ -114,12 +145,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class property in module builtins:\n",
+      "\n",
+      "class property(object)\n",
+      " |  property(fget=None, fset=None, fdel=None, doc=None)\n",
+      " |  \n",
+      " |  Property attribute.\n",
+      " |  \n",
+      " |    fget\n",
+      " |      function to be used for getting an attribute value\n",
+      " |    fset\n",
+      " |      function to be used for setting an attribute value\n",
+      " |    fdel\n",
+      " |      function to be used for del'ing an attribute\n",
+      " |    doc\n",
+      " |      docstring\n",
+      " |  \n",
+      " |  Typical use is to define a managed attribute x:\n",
+      " |  \n",
+      " |  class C(object):\n",
+      " |      def getx(self): return self._x\n",
+      " |      def setx(self, value): self._x = value\n",
+      " |      def delx(self): del self._x\n",
+      " |      x = property(getx, setx, delx, \"I'm the 'x' property.\")\n",
+      " |  \n",
+      " |  Decorators make defining new properties or modifying existing ones easy:\n",
+      " |  \n",
+      " |  class C(object):\n",
+      " |      @property\n",
+      " |      def x(self):\n",
+      " |          \"I am the 'x' property.\"\n",
+      " |          return self._x\n",
+      " |      @x.setter\n",
+      " |      def x(self, value):\n",
+      " |          self._x = value\n",
+      " |      @x.deleter\n",
+      " |      def x(self):\n",
+      " |          del self._x\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __delete__(self, instance, /)\n",
+      " |      Delete an attribute of instance.\n",
+      " |  \n",
+      " |  __get__(self, instance, owner, /)\n",
+      " |      Return an attribute of instance, which is of type owner.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __set__(self, instance, value, /)\n",
+      " |      Set an attribute of instance to value.\n",
+      " |  \n",
+      " |  deleter(...)\n",
+      " |      Descriptor to change the deleter on a property.\n",
+      " |  \n",
+      " |  getter(...)\n",
+      " |      Descriptor to change the getter on a property.\n",
+      " |  \n",
+      " |  setter(...)\n",
+      " |      Descriptor to change the setter on a property.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __isabstractmethod__\n",
+      " |  \n",
+      " |  fdel\n",
+      " |  \n",
+      " |  fget\n",
+      " |  \n",
+      " |  fset\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "help(property)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -138,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
